--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><body>Hello test test</body></html>
+<!DOCTYPE html>
+<html><body>
+
+ <iframe 
+  src="https://www.crazygames.com/embed/basketball-stars-2019" 
+  style="width: 100%; height: 600px; border: none;" 
+  allow="gamepad *; fullscreen"
+></iframe>
+</body></html>
