--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><body>
 
  <iframe 
-  src="https://www.crazygames.com/embed/basketball-stars-2019" 
+  src="https://www.crazygames.com/embed/[game-slug]" 
   style="width: 100%; height: 600px; border: none;" 
   allow="gamepad *; fullscreen"
 ></iframe>
