--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html><body>
-
- <iframe 
-  src="https://www.crazygames.com/embed/[game-slug]" 
-  style="width: 100%; height: 600px; border: none;" 
-  allow="gamepad *; fullscreen"
-></iframe>
-</body></html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Basketball Stars 2019</title>
+  <style>
+    body {
+      margin: 0;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+</head>
+<body>
+  <iframe 
+    src="https://www.crazygames.com/embed/basketball-stars-2019" 
+    allow="gamepad *; fullscreen"
+  ></iframe>
+</body>
+</html>
