--- a/index.html
+++ b/index.html
@@ -3,27 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Basketball Stars 2019</title>
+  <title>CrazyGames Embeds</title>
   <style>
     body {
       margin: 0;
       background: #000;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      flex-direction: column;
+      gap: 20px;
+      padding: 20px;
     }
     iframe {
       border: none;
       width: 100%;
-      height: 100%;
+      height: 600px;
+    }
+    h2 {
+      color: #fff;
+      font-family: sans-serif;
     }
   </style>
 </head>
 <body>
+
+  <h2>Basketball Stars</h2>
   <iframe 
-    src="https://www.crazygames.com/game/basketball-stars" 
-    allow="gamepad *; fullscreen"
-  ></iframe>
+    src="https://www.crazygames.com/embed/basketball-stars" 
+    allow="gamepad *; fullscreen">
+  </iframe>
+
+  <h2>Shell Shockers</h2>
+  <iframe 
+    src="https://www.crazygames.com/embed/shellshockers-io" 
+    allow="gamepad *; fullscreen">
+  </iframe>
+
+  <h2>Moto X3M</h2>
+  <iframe 
+    src="https://www.crazygames.com/embed/moto-x3m" 
+    allow="gamepad *; fullscreen">
+  </iframe>
+
+  <h2>Paper.io 2</h2>
+  <iframe 
+    src="https://www.crazygames.com/embed/paper-io-2" 
+    allow="gamepad *; fullscreen">
+  </iframe>
+
+  <h2>Madalin Stunt Cars 2</h2>
+  <iframe 
+    src="https://www.crazygames.com/embed/madalin-stunt-cars-2" 
+    allow="gamepad *; fullscreen">
+  </iframe>
+
 </body>
 </html>
