--- a/index.html
+++ b/index.html
@@ -25,28 +25,10 @@
   </style>
 </head>
 <body>
-
-  <h2>Shell Shockers</h2>
+  
+  <h2> online games 2</h2>
   <iframe 
-    src="https://www.crazygames.com/embed/shellshockers-io" 
-    allow="gamepad *; fullscreen">
-  </iframe>
-
-  <h2>Moto X3M</h2>
-  <iframe 
-    src="https://www.crazygames.com/embed/moto-x3m" 
-    allow="gamepad *; fullscreen">
-  </iframe>
-
-  <h2>Paper.io 2</h2>
-  <iframe 
-    src="https://www.crazygames.com/embed/paper-io-2" 
-    allow="gamepad *; fullscreen">
-  </iframe>
-
-  <h2>Madalin Stunt Cars 2</h2>
-  <iframe 
-    src="https://www.crazygames.com/embed/madalin-stunt-cars-2" 
+    src="https://www.onlinegames.io/" 
     allow="gamepad *; fullscreen">
   </iframe>
 
