--- a/index.html
+++ b/index.html
@@ -1,85 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Play Online Games</title>
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      background: #111;
-      color: #eee;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    }
-    header {
-      padding: 0.75rem 1rem;
-      background: #1b1b1b;
-      border-bottom: 1px solid #2a2a2a;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 1.1rem;
-      font-weight: 600;
-    }
-    .wrap {
-      height: calc(100% - 58px); /* header height */
-    }
-    .frame {
-      width: 100%;
-      height: 100%;
-      border: 0;
-      background: #000;
-    }
-    /* Fullscreen button style (optional) */
-    .controls {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      z-index: 10;
-    }
-    .btn {
-      padding: 0.5rem 0.75rem;
-      border: 1px solid #444;
-      background: #222;
-      color: #eee;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .btn:hover { background: #2a2a2a; }
-  </style>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
+    <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
+    <title>Basketball Stars Unblocked</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script src="js/fullscreen.js"></script>
 </head>
+
 <body>
-  <header>
-    <h1>Online Games</h1>
-  </header>
+    <script>
+        window.location="https://ubg98.github.io/BasketballStars/";
+    </script>
+    <div id="content"></div>
+    <div id="orientation"></div>
+    <div id="loader">Loading ...</div>
+    <script type="text/javascript" src="assets/box2dweb/nape.min.js">
+        var nape = "nape.min.js";
+    </script>
+    <script type="text/javascript" src="assets/box2dweb/nape-debug-draw.min.js"></script>
+    <script type="text/javascript" src="assets/box2dweb/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="assets/box2dweb/easeljs-0.8.2.combined.js"></script>
+    <script type="text/javascript" src="assets/box2dweb/bluebird.min.js"></script>
 
-  <div class="wrap">
-    <iframe
-      id="game"
-      class="frame"
-      src="https://onlinegames.io/"
-      allow="autoplay; fullscreen; gamepad; accelerometer; magnetometer; gyroscope; clipboard-read; clipboard-write"
-      allowfullscreen
-      referrerpolicy="no-referrer-when-downgrade"
-      sandbox="allow-scripts allow-same-origin allow-forms allow-pointer-lock allow-popups allow-popups-to-escape-sandbox"
-      loading="lazy"
-    ></iframe>
-  </div>
 
-  <div class="controls">
-    <button class="btn" onclick="toggleFullscreen()">Fullscreen</button>
-  </div>
 
-  <script>
-    function toggleFullscreen() {
-      const el = document.getElementById('game');
-      if (document.fullscreenElement) {
-        document.exitFullscreen();
-      } else {
-        if (el.requestFullscreen) el.requestFullscreen();
-      }
-    }
-  </script>
+    <script type="text/javascript">
+    var useEvents = (typeof(Event) === 'function');
+
+        var myDispatchEvent = function (name){
+            var event;
+            if (useEvents){
+                event =  new Event(name);
+            }else{
+                event = document.createEvent('Event');
+                event.initEvent(name, true, true);
+            }
+            document.getElementById("content").dispatchEvent(event);
+        }
+
+        window["GD_OPTIONS"] = {
+                "gameId": "69d78d071f704fa183d75b4114ae40ec",
+                "onEvent": function(event) {
+                    switch (event.name) {
+                        case "SDK_GAME_START":
+                            // advertisement done, resume game logic and unmute audio
+                            myDispatchEvent('SDK_GAME_START');
+                            break;
+                        case "SDK_GAME_PAUSE":
+                            // pause game logic / mute audio
+                            myDispatchEvent('SDK_GAME_PAUSE');
+                            // document.getElementById("content").dispatchEvent(new Event("SDK_GAME_PAUSE"));
+                            break;
+                        case "SDK_GDPR_TRACKING":
+                            // this event is triggered when your user doesn't want to be tracked
+                            console.log("SDK_GDPR_TRACKING");
+                            break;
+                        case "SDK_GDPR_TARGETING":
+                            // this event is triggered when your user doesn't want personalised targeting of ads and such
+                            console.log("SDK_GDPR_TARGETING");
+                            break;
+                        case "SDK_READY":
+                            // this event is triggered when your user doesn't want personalised targeting of ads and such
+                            console.log("SDK_READY");
+                            // gdsdk.openConsole();
+                            break;
+                    }
+                },
+            };
+            (function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s);
+                js.id = id;
+                js.src = 'js//main.min.js';
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'gamedistribution-jssdk'));
+    </script>
+<script type="text/javascript" src="basketball_legends_2019.min.js"></script>
+<script src="js/analytics_ubg_v1_4.js"></script>
+
 </body>
+
 </html>
