--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
     <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
-    <title>Basketball Stars Unblocked</title>
+    <title> Schoology </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script src="js/fullscreen.js"></script>
 </head>
 
 <body>
     <script>
-        window.location="https://ubg98.github.io/BasketballStars/";
+        window.location="https://python531.github.io/python/";
     </script>
     <div id="content"></div>
     <div id="orientation"></div>
